--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "test": "mocha --reporter dot"
   },
   "dependencies": {
+    "glob": "~6.0.0",
+    "lazystream": "~0.1.0",
+    "lodash": "~3.10.0",
+    "readable-stream": "~2.0.0"
   },
   "devDependencies": {
     "chai": "~3.4.0",
