--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glob": "~6.0.0",
     "lazystream": "~0.1.0",
     "lodash": "~3.10.0",
+    "normalize-path": "~2.0.0",
     "readable-stream": "~2.0.0"
   },
   "devDependencies": {
