--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "test": "mocha --reporter dot"
   },
   "dependencies": {
-    "glob": "~6.0.0",
-    "lazystream": "~0.1.0",
-    "lodash": "~3.10.0",
-    "normalize-path": "~2.0.0",
-    "readable-stream": "~2.0.0"
+    "glob": "^7.0.0",
+    "lazystream": "^0.1.0",
+    "lodash": "^4.8.0",
+    "normalize-path": "^2.0.0",
+    "readable-stream": "^2.0.0"
   },
   "devDependencies": {
-    "chai": "~3.4.0",
-    "mocha": "~2.3.3",
-    "rimraf": "~2.4.2",
-    "mkdirp": "~0.5.0"
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3",
+    "rimraf": "^2.4.2",
+    "mkdirp": "^0.5.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
