switch to specialized lodash npm modules to optimize node_modules install size

--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "glob": "^7.0.0",
     "graceful-fs": "^4.1.0",
     "lazystream": "^1.0.0",
-    "lodash": "^4.8.0",
+    "lodash.assign": "^4.2.0",
+    "lodash.defaults": "^4.2.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.toarray": "^4.4.0",
+    "lodash.union": "^4.6.0",
     "normalize-path": "^2.0.0",
     "readable-stream": "^2.0.0"
   },
