--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "test": "mocha --reporter dot"
   },
   "dependencies": {
-    "glob": "^7.0.0",
-    "graceful-fs": "^4.1.0",
+    "glob": "^7.1.4",
+    "graceful-fs": "^4.2.0",
     "lazystream": "^1.0.0",
     "lodash.defaults": "^4.2.0",
     "lodash.difference": "^4.5.0",
@@ -43,10 +43,10 @@
     "readable-stream": "^2.0.0"
   },
   "devDependencies": {
-    "chai": "^4.0.0",
+    "chai": "^4.2.0",
+    "mkdirp": "^0.5.0",
     "mocha": "^5.0.0",
-    "rimraf": "^2.6.0",
-    "mkdirp": "^0.5.0"
+    "rimraf": "^2.6.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
