--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,10 @@
   "packageRules": [
     {
       "matchManagers": ["npm", "nvm"],
+      "separateMultipleMajor": true
+    },
+    {
+      "matchManagers": ["npm", "nvm"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
     },
