--- a/package.json
+++ b/package.json
@@ -34,11 +34,7 @@
     "glob": "^8.0.0",
     "graceful-fs": "^4.2.0",
     "lazystream": "^1.0.0",
-    "lodash.defaults": "^4.2.0",
-    "lodash.difference": "^4.5.0",
-    "lodash.flatten": "^4.4.0",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.union": "^4.6.0",
+    "lodash": "^4.17.15",
     "normalize-path": "^3.0.0",
     "readable-stream": "^3.6.0"
   },
