--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "glob": "^10.0.0",
     "graceful-fs": "^4.2.0",
+    "is-stream": "^2.0.1",
     "lazystream": "^1.0.0",
     "lodash": "^4.17.15",
     "normalize-path": "^3.0.0",
